# MultiTask

./: pyproject.toml
multitask/: __init__.py  get_data.py  my_blue_classifier_20200930.py  my_blue_classifier_optimized.py  run.py  run_optimized.py
multitask/module/: my_eval_online_model.py  task_heads.py
tests/: test_multitask.py
