[tool.poetry]
name = "multiTask"
version = "0.1.0"
description = ""
authors = ["Yuchao Zhang <u6715243@anu.edu.au>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
transformers = "^3.3.1"
logger = "^1.4"
wget = "^3.2"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
